--- a/lib/generators/koala/install/templates/config/initializers/koala.rb.tt
+++ b/lib/generators/koala/install/templates/config/initializers/koala.rb.tt
@@ -1,3 +1,7 @@
+# config/initializers/koala.rb
+# Monkey-patch in Facebook config so Koala knows to
+# automatically use Facebook settings from here if none are given
+
 module Facebook
   CONFIG = YAML.load(ERB.new(File.read("#{RAILS_ROOT}/config/facebook.yml")).result)[RAILS_ENV]
   APP_ID = CONFIG['app_id']
