Added "magic" UTF-8 encoding comment to all source files

--- a/lib/generators/koala/install/templates/config/initializers/koala.rb.tt
+++ b/lib/generators/koala/install/templates/config/initializers/koala.rb.tt
@@ -1,3 +1,4 @@
+# -*- encoding: utf-8 -*-
 # config/initializers/koala.rb
 # Monkey-patch in Facebook config so Koala knows to
 # automatically use Facebook settings from here if none are given
