--- a/lib/generators/koala/install/templates/config/initializers/koala.rb.tt
+++ b/lib/generators/koala/install/templates/config/initializers/koala.rb.tt
@@ -2,6 +2,7 @@
 # config/initializers/koala.rb
 # Monkey-patch in Facebook config so Koala knows to
 # automatically use Facebook settings from here if none are given
+require "koala"
 
 module Facebook
   CONFIG = YAML.load(ERB.new(File.read("#{RAILS_ROOT}/config/facebook.yml")).result)[RAILS_ENV]
